fix(expansion-panel): title text not centered with taller description (#12161)
Fixes the expansion panel's title not being centered vertically if the description is taller.

--- a/src/material/expansion/expansion-panel-header.scss
+++ b/src/material/expansion/expansion-panel-header.scss
@@ -55,6 +55,7 @@
   display: flex;
   flex-grow: 1;
   margin-right: 16px;
+  align-items: center;
 
   [dir='rtl'] & {
     margin-right: 0;
